--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
             If you have a Cacao Account, log in with your email or phone number.
         </p>
     </header>
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number" />
-        <input type="password" placeholder="Password" />
+    <form action="friends.html" method="GET" id="login-form">
+        <input name="username" type="text" placeholder="Email or phone number" />
+        <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log In" />
         <a href="#">Find Cacao Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
+    
     <script 
         src="https://kit.fontawesome.com/2708595b1d.js" 
         crossorigin="anonymous">
